--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$yqeNo2Gcn.ya3WuNi3qXGeroaxS5iuLZApwiJuT9RxqrMRFEyMXVq"
+# 	- password: java.lang.String = "$2a$05$xb6Qpt64Gi97c/LYQ6xNyOFtoLnrp1f0x6BI8M43NBbxAnx3iBqyO"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$gAdoU4/vW8n8WxeUeav52uHJTDFnExdu99Ge3kguacTAHSUlKZ7.S"
+# 	- password: java.lang.String = "$2a$05$8YJ4ReqaHh9ZQ5rH3HUHF.5BMuDkTttMPcmFBjYfYOs.V8bKS1ajm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -501,7 +501,7 @@ providerUserAccount=1157
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "provider"
-# 	- password: java.lang.String = "$2a$05$NFqYaNtF1.pt/BTJr/KOcueLnuebaEHTSW7rdgRpnkvS9qxpTgoIe"
+# 	- password: java.lang.String = "$2a$05$KhPtasYARfZ9jHZfldoAXesf2W.kwjRCvrQwQxOpO.NapYwsqPrt2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Provider, surname=Acme.com, email=provider@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Provider{id=1158, version=0}, acme.framework.entities.Authenticated{id=1159, version=0}]
@@ -548,7 +548,7 @@ consumerUserAccount=1160
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "consumer"
-# 	- password: java.lang.String = "$2a$05$bsdSCng8BqBs.KN.uuOLLOf6uIEp9DIDo18vSiM5L4xuiMAi8JmN."
+# 	- password: java.lang.String = "$2a$05$/t97uH.xNHv5oFGW0PReNujsjIQ6PoiaBLFhc/Yhn7dr2cODKeFDG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Consumer, surname=Acme.com, email=consumer@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Consumer{id=1161, version=0}, acme.framework.entities.Authenticated{id=1162, version=0}]
@@ -595,7 +595,7 @@ employer1UserAccount=1163
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$vlFdggCRKdXoF/rM/hT1KeNntMBwIG62kgEJ72bMSWyP3EmsL9U5m"
+# 	- password: java.lang.String = "$2a$05$URoLtJeFOPn4zy.cillsN.tIvGEAzk4GQumAuTg2qCeTF4y8k8jCe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=1164, version=0}, acme.framework.entities.Authenticated{id=1165, version=0}]
@@ -642,7 +642,7 @@ employer2UserAccount=1166
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$WGQgBiXMwVbmuCsQe9tT1OKfiTzW0/sfvlTxa2JXrQE2Qh.3as3xS"
+# 	- password: java.lang.String = "$2a$05$Xse7FuKcpYh2pvZml1hn5eMZzZ4tYjmzWSQYUbp.TOS2dBNHTZSxS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=1167, version=0}, acme.framework.entities.Authenticated{id=1168, version=0}]
@@ -689,7 +689,7 @@ worker1UserAccount=1169
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$mKG5Mf0YarJ3eU4yXd9NEOX16LFh0lKocZU8JH27qyelGcGgwieuG"
+# 	- password: java.lang.String = "$2a$05$kC5v7CFdsp09W5gH3FDfpu1Uhd8b28MX16DZTcnYc/5sAOrjcL81y"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=1170, version=0}, acme.framework.entities.Authenticated{id=1171, version=0}]
@@ -736,7 +736,7 @@ worker2UserAccount=1172
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$9Gzrh5fnQPRUEVwBxTRt5eMcXhpI0hCipy1BkZpj9gGAEWVhgXOZu"
+# 	- password: java.lang.String = "$2a$05$dA3/bJdkQLfZHewmyNZir.mnwsxjrI.ckvt0w5Zv7uWYV3dfmLSqW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=1173, version=0}, acme.framework.entities.Authenticated{id=1174, version=0}]
@@ -783,7 +783,7 @@ auditor1UserAccount=1175
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$EHzijSRtlq2B8bkR3EzXOuY9yiNZJ1p8YrAdZGhe1N9lC0Alema22"
+# 	- password: java.lang.String = "$2a$05$hj09oAs30FBCbbdoJbxlJOJsY2oracMooqNTnpWQD4xnjSDlo1892"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=1176, version=0}, acme.framework.entities.Authenticated{id=1177, version=0}]
@@ -830,7 +830,7 @@ auditor2UserAccount=1178
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$bNahV4BRinvWvqA.lO8cWuIrsWCtTeUC/T8r4Fbwkrq2i5SNASooi"
+# 	- password: java.lang.String = "$2a$05$aEf4MfrxcTC.kgsVoatUTOMRN0AtuYLGhWeJFg3GaREPh7FhIvrB."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=Two, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=1179, version=0}, acme.framework.entities.Authenticated{id=1180, version=0}]
@@ -967,7 +967,7 @@ application1=1186
 # 	- statement: java.lang.String = "Statement 1"
 # 	- skills: java.lang.String = "Skill 1, Skill 2"
 # 	- qualifications: java.lang.String = "Qualification 1, Qualification 2"
-# 	- justification: java.lang.String = " "
+# 	- justification: java.lang.String = ""
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=1170, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=1183, version=0}
 
@@ -987,7 +987,7 @@ application2=1187
 # 	- statement: java.lang.String = "Statement 2"
 # 	- skills: java.lang.String = "Skill 1, Skill 2"
 # 	- qualifications: java.lang.String = "Qualification 1, Qualification 2"
-# 	- justification: java.lang.String = " "
+# 	- justification: java.lang.String = ""
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=1173, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=1184, version=0}
 
@@ -1027,7 +1027,7 @@ application4=1189
 # 	- statement: java.lang.String = "Statement 1"
 # 	- skills: java.lang.String = "Skill 1, Skill 2"
 # 	- qualifications: java.lang.String = "Qualification 1, Qualification 2"
-# 	- justification: java.lang.String = " "
+# 	- justification: java.lang.String = ""
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=1170, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=1184, version=0}
 
@@ -1047,7 +1047,7 @@ application5=1190
 # 	- statement: java.lang.String = "Statement 1"
 # 	- skills: java.lang.String = "Skill 1, Skill 2"
 # 	- qualifications: java.lang.String = "Qualification 1, Qualification 2"
-# 	- justification: java.lang.String = " "
+# 	- justification: java.lang.String = ""
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=1173, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=1185, version=0}
 
@@ -1067,7 +1067,7 @@ application6=1191
 # 	- statement: java.lang.String = "Statement 1"
 # 	- skills: java.lang.String = "Skill 1, Skill 2"
 # 	- qualifications: java.lang.String = "Qualification 1, Qualification 2"
-# 	- justification: java.lang.String = " "
+# 	- justification: java.lang.String = ""
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=1173, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=1183, version=0}
 
@@ -1087,7 +1087,7 @@ application7=1192
 # 	- statement: java.lang.String = "Statement 1"
 # 	- skills: java.lang.String = "Skill 1, Skill 2"
 # 	- qualifications: java.lang.String = "Qualification 1, Qualification 2"
-# 	- justification: java.lang.String = " "
+# 	- justification: java.lang.String = ""
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=1170, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=1183, version=0}
 
@@ -1107,7 +1107,7 @@ application8=1193
 # 	- statement: java.lang.String = "Statement 1"
 # 	- skills: java.lang.String = "Skill 1, Skill 2"
 # 	- qualifications: java.lang.String = "Qualification 1, Qualification 2"
-# 	- justification: java.lang.String = " "
+# 	- justification: java.lang.String = ""
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=1173, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=1183, version=0}
 
