MessageThread and message task added

--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$Fzj0bpMO0W66XVZMjGdwoeVo5V92riPZCER6Hu1ExyrEmUam4/p5u"
+# 	- password: java.lang.String = "$2a$05$cs6enyn6KdfGHlOuwoByPOzIkF/39JV/gN5OpOFmWCED.yB9ckjOq"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$kUfGNFMuOPRa9Gi6uO5SE.bEHQKMffosCYoqhLPpUM7j11T599.wO"
+# 	- password: java.lang.String = "$2a$05$0oNJxUl2267DA1OZ/Ncl0elDUz8YDzuNLWVih99aNwijIbIlZVX2K"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -501,7 +501,7 @@ providerUserAccount=937
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "provider"
-# 	- password: java.lang.String = "$2a$05$dLac3pMOOEKO9nQxJZTUHuY4tXiJT8emNTfweyz/YgS1lqwyhMyay"
+# 	- password: java.lang.String = "$2a$05$CBgoFfZ3HnigmdxEHxjLJO2JEhTb0vzEqyI5587qG2NEbaBlgTSVq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Provider, surname=Acme.com, email=provider@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Provider{id=938, version=0}, acme.framework.entities.Authenticated{id=939, version=0}]
@@ -548,7 +548,7 @@ consumerUserAccount=940
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "consumer"
-# 	- password: java.lang.String = "$2a$05$uxFNda8q7.lRdrWR6M4rk.qfYK/uZrnhIB.bqQmWZ3ujyT9H7rMNO"
+# 	- password: java.lang.String = "$2a$05$wXBQDYfOGS0GfmmwQ3BJ6.8f.2HkUG8GVjuh6PQFC.WCeVfEEVylq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Consumer, surname=Acme.com, email=consumer@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Consumer{id=941, version=0}, acme.framework.entities.Authenticated{id=942, version=0}]
@@ -595,7 +595,7 @@ employer1UserAccount=943
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$7g28qTn2ivod317ndoIMYOYZGhqBpVqaC09TTiTg4AEh9Mb8lL04S"
+# 	- password: java.lang.String = "$2a$05$0wwfyraZGAUlkSmtnbR.bejtP6OHZQgYPvshHQi28RFxUG7J9kPTW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=944, version=0}, acme.framework.entities.Authenticated{id=945, version=0}]
@@ -642,7 +642,7 @@ employer2UserAccount=946
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$v7V.Qm9BPELpu3Q7bdRCTulf/WJKDvQxCGqvRS/R5M606jcD/ykby"
+# 	- password: java.lang.String = "$2a$05$HHwRiCElIKxFMRYHEE0Bm.DI3zNokUXrkHah2gl23hW7jTvMRKD4G"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=947, version=0}, acme.framework.entities.Authenticated{id=948, version=0}]
@@ -689,7 +689,7 @@ worker1UserAccount=949
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$QOMAIxdqNfQ8MS4IJ9bDO.WLOWtyxH/XdAjxaB7.8AJoG9oPQwDfO"
+# 	- password: java.lang.String = "$2a$05$4SXmU9azBn5beqImxoWKie6Kx7pZ.HhzewN1Fu/onGBAhIVLZTPF."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=950, version=0}, acme.framework.entities.Authenticated{id=951, version=0}]
@@ -736,7 +736,7 @@ worker2UserAccount=952
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$DfHIfp9mBltyAcSW0iX3VuweS7WDScY91iUKOcQx5QKqnQ0n6c6Bi"
+# 	- password: java.lang.String = "$2a$05$Oum/XA7GNsr7ICqcPY3TyuDC3OdIze1w2Mj4g0fc0SJhF0VOmd1tO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=953, version=0}, acme.framework.entities.Authenticated{id=954, version=0}]
@@ -783,7 +783,7 @@ auditor1UserAccount=955
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$iWPDlFHW51dboyvy8x7C7.gx8zP5hpM1IAdG2bHz2RyQX8EDuUZ7y"
+# 	- password: java.lang.String = "$2a$05$qm6J66PnHDyGAs994fwL7u2FcpXZq4hxmtsamysmczBFKaFo0kK7G"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=956, version=0}, acme.framework.entities.Authenticated{id=957, version=0}]
@@ -830,7 +830,7 @@ auditor2UserAccount=958
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$vUAZKqf5H3OITV6AVyLG.O54WJUn0pO5x8Uuyqeerk7xm3IHIqd.G"
+# 	- password: java.lang.String = "$2a$05$/VwFH961C2nrsx6aCG3ou.RPujkMBVL7GaKR5q43DYtleDC9ul96u"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=Two, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=959, version=0}, acme.framework.entities.Authenticated{id=960, version=0}]
@@ -1006,7 +1006,7 @@ application3=968
 # 	- skills: java.lang.String = "Skill 1, Skill 2"
 # 	- qualifications: java.lang.String = "Qualification 1, Qualification 2"
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=950, version=0}
-# 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=964, version=0}
+# 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=965, version=0}
 
 duty1=969
 
