--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$Fzj0bpMO0W66XVZMjGdwoeVo5V92riPZCER6Hu1ExyrEmUam4/p5u"
+# 	- password: java.lang.String = "$2a$05$HityuawqwWRNPLthl.0Ixew/PrTZxtd4ZgM87OqE0G7kjZ9F99oMy"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$kUfGNFMuOPRa9Gi6uO5SE.bEHQKMffosCYoqhLPpUM7j11T599.wO"
+# 	- password: java.lang.String = "$2a$05$dm0QuoikbcbxekHzh7Izv.vqTOZdKxU3.9FWkp1tL6X.FK7yY7tFu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -501,7 +501,7 @@ providerUserAccount=937
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "provider"
-# 	- password: java.lang.String = "$2a$05$dLac3pMOOEKO9nQxJZTUHuY4tXiJT8emNTfweyz/YgS1lqwyhMyay"
+# 	- password: java.lang.String = "$2a$05$eWqyJ7vKLYWzh0AKucLuYeQ24kNuClc.FhbIPFHCUaZSLMc3RAmqO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Provider, surname=Acme.com, email=provider@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Provider{id=938, version=0}, acme.framework.entities.Authenticated{id=939, version=0}]
@@ -548,7 +548,7 @@ consumerUserAccount=940
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "consumer"
-# 	- password: java.lang.String = "$2a$05$uxFNda8q7.lRdrWR6M4rk.qfYK/uZrnhIB.bqQmWZ3ujyT9H7rMNO"
+# 	- password: java.lang.String = "$2a$05$o1oBjtk4QxJUsYgpFsDcvuqD6q2mJU3WYC3h6qHEfhbBXmuQ0CW3W"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Consumer, surname=Acme.com, email=consumer@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Consumer{id=941, version=0}, acme.framework.entities.Authenticated{id=942, version=0}]
@@ -595,7 +595,7 @@ employer1UserAccount=943
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$7g28qTn2ivod317ndoIMYOYZGhqBpVqaC09TTiTg4AEh9Mb8lL04S"
+# 	- password: java.lang.String = "$2a$05$DQOeTLXsw9QGNWQzhjprqugyzN5rwFrMggXfZJH7p1QmO356k266q"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=944, version=0}, acme.framework.entities.Authenticated{id=945, version=0}]
@@ -642,7 +642,7 @@ employer2UserAccount=946
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$v7V.Qm9BPELpu3Q7bdRCTulf/WJKDvQxCGqvRS/R5M606jcD/ykby"
+# 	- password: java.lang.String = "$2a$05$..DstvO1d9kqofbdX2buK.Q8KuYQtmdZdtcwK//XjhXQg8phM9yjG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=947, version=0}, acme.framework.entities.Authenticated{id=948, version=0}]
@@ -689,7 +689,7 @@ worker1UserAccount=949
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$QOMAIxdqNfQ8MS4IJ9bDO.WLOWtyxH/XdAjxaB7.8AJoG9oPQwDfO"
+# 	- password: java.lang.String = "$2a$05$vwkIwTRAHa5q/RR7Ir3UBu0EBawmKP9c4S0WA.927W3kcRVvGY2Ja"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=950, version=0}, acme.framework.entities.Authenticated{id=951, version=0}]
@@ -736,7 +736,7 @@ worker2UserAccount=952
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$DfHIfp9mBltyAcSW0iX3VuweS7WDScY91iUKOcQx5QKqnQ0n6c6Bi"
+# 	- password: java.lang.String = "$2a$05$UFF2LEAILZujtCHhSRUkbuvQWM8cvE8TfUwMRai6I.2EGJ18uNfn."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=953, version=0}, acme.framework.entities.Authenticated{id=954, version=0}]
@@ -783,7 +783,7 @@ auditor1UserAccount=955
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$iWPDlFHW51dboyvy8x7C7.gx8zP5hpM1IAdG2bHz2RyQX8EDuUZ7y"
+# 	- password: java.lang.String = "$2a$05$heWS7ZXohx6s8EFfNs6FuOgKQ9.QjXP9GUVZXLA75YoYC5oKKdT.y"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=956, version=0}, acme.framework.entities.Authenticated{id=957, version=0}]
@@ -830,7 +830,7 @@ auditor2UserAccount=958
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$vUAZKqf5H3OITV6AVyLG.O54WJUn0pO5x8Uuyqeerk7xm3IHIqd.G"
+# 	- password: java.lang.String = "$2a$05$MRnBkrOK1HaLXdcS1eiecuTNK7xKt6ObheFxr1KA2ZIqhPJSIDUZu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=Two, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=959, version=0}, acme.framework.entities.Authenticated{id=960, version=0}]
@@ -905,7 +905,7 @@ job1=963
 # 	from acme.entities.jobs.Job:
 # 	- serialVersionUID: long = 1
 # 	- referenceNumber: java.lang.String = "EMP1-JOB1"
-# 	- finalMode: java.lang.Boolean = true
+# 	- finalMode: boolean = true
 # 	- title: java.lang.String = "Title 1"
 # 	- deadline: java.util.Date = <<Sat Oct 10 10:00:00 CEST 2020>>
 # 	- salary: acme.framework.datatypes.Money = <<€ 15000.98>>
@@ -924,7 +924,7 @@ job2=964
 # 	from acme.entities.jobs.Job:
 # 	- serialVersionUID: long = 1
 # 	- referenceNumber: java.lang.String = "EMP1-JOB2"
-# 	- finalMode: java.lang.Boolean = true
+# 	- finalMode: boolean = true
 # 	- title: java.lang.String = "Title 2"
 # 	- deadline: java.util.Date = <<Tue Sep 10 23:00:00 CEST 2030>>
 # 	- salary: acme.framework.datatypes.Money = <<€ 20000.00>>
@@ -943,7 +943,7 @@ job3=965
 # 	from acme.entities.jobs.Job:
 # 	- serialVersionUID: long = 1
 # 	- referenceNumber: java.lang.String = "EMP2-JOB1"
-# 	- finalMode: java.lang.Boolean = false
+# 	- finalMode: boolean = false
 # 	- title: java.lang.String = "Title 3"
 # 	- deadline: java.util.Date = <<Fri Sep 10 23:00:00 CEST 2010>>
 # 	- salary: acme.framework.datatypes.Money = <<€ 20000.00>>
@@ -1006,7 +1006,7 @@ application3=968
 # 	- skills: java.lang.String = "Skill 1, Skill 2"
 # 	- qualifications: java.lang.String = "Qualification 1, Qualification 2"
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=950, version=0}
-# 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=964, version=0}
+# 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=965, version=0}
 
 duty1=969
 
@@ -1020,7 +1020,7 @@ duty1=969
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Duty1"
 # 	- description: java.lang.String = "Duty number one"
-# 	- percentage: java.lang.Integer = 51
+# 	- percentage: java.lang.Integer = 57
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=963, version=0}
 
 duty2=970
@@ -1050,7 +1050,7 @@ duty3=971
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Duty3"
 # 	- description: java.lang.String = "Duty number three"
-# 	- percentage: java.lang.Integer = 53
+# 	- percentage: java.lang.Integer = 43
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=963, version=0}
 
 auditRecord1=972
