Authenticated puede convertirse en auditor

--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$1mXbk5n/BHVoualMsFvEzuUw3labgGoDMzF6KMIb3Y8jneQoobLoa"
+# 	- password: java.lang.String = "$2a$05$9MSeJpMY3/kbxYSsl8FrZu2Vk74zEpt2ckYmJ96OdHa1DojuIfZXu"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$aHuGFh3YWAKd9ZwPRZB3fuECwDiB56N/X5J33MLiLQb8OXT.XCU2y"
+# 	- password: java.lang.String = "$2a$05$Ryi9vIL6A3lUFOK4YBSQ6.6LXBA5qzaOfbMn3WRpJYsWo26i2ys0."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -501,7 +501,7 @@ providerUserAccount=937
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "provider"
-# 	- password: java.lang.String = "$2a$05$Vbw27W/.7R3YeRVgrIECveJgI9pthsYLehBvQOIkGu30ud6btAh9y"
+# 	- password: java.lang.String = "$2a$05$naQTdihBkdD.oT83PrPZBuX2GZ3gbVQDmSBjgyoqgX2xdYq2kr.SS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Provider, surname=Acme.com, email=provider@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Provider{id=938, version=0}, acme.framework.entities.Authenticated{id=939, version=0}]
@@ -548,7 +548,7 @@ consumerUserAccount=940
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "consumer"
-# 	- password: java.lang.String = "$2a$05$6zjW.8vMI.RE1TEeO5HRj.1SXPt4FTfT4xmbFZ/P74zr9WPNwKwJO"
+# 	- password: java.lang.String = "$2a$05$HGs8PTNsKWUm1Hfs62FUZul.iZC69IV5pGSvoUWXIF7pF3bXCgBSq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Consumer, surname=Acme.com, email=consumer@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Consumer{id=941, version=0}, acme.framework.entities.Authenticated{id=942, version=0}]
@@ -595,7 +595,7 @@ employer1UserAccount=943
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$tRvZUtWDwJcouxdMciltfOm9uMY8mPMZ4CombdSF5aj9qiA4vnaxS"
+# 	- password: java.lang.String = "$2a$05$xrVz4JLfBbo58JJseZFY0.haRLAR6qiF7qxHUs2pp0iQkJPhJR.Ly"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=944, version=0}, acme.framework.entities.Authenticated{id=945, version=0}]
@@ -642,7 +642,7 @@ employer2UserAccount=946
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$2E6clMMQ.MkI0/zNXARKVezeyuSkfsAm8WfcYQK.7yobr0j9Xep1K"
+# 	- password: java.lang.String = "$2a$05$wzZ9U91IYBIu1aZFCaqRmea9ApvBPnCYTWOvmgY9XY.mU8/Kv9CNW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=947, version=0}, acme.framework.entities.Authenticated{id=948, version=0}]
@@ -689,7 +689,7 @@ worker1UserAccount=949
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$gaC5pyfsLJJ9MjfzMwQ.aubKshvOEFoE.509ijeay5yHSdP59QLmS"
+# 	- password: java.lang.String = "$2a$05$jNqaOqx991FM.qGDWDMWbO.TUYIClSJezzTMFN0Z9UeY0Kw0JbpBG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=950, version=0}, acme.framework.entities.Authenticated{id=951, version=0}]
@@ -736,7 +736,7 @@ worker2UserAccount=952
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$1O0AjgSW5dVmInI7GzLdFeUWoL69vcaJDb9WpBivBjvgZr4S.S5XK"
+# 	- password: java.lang.String = "$2a$05$d6BfyBc1fdGriL8gD/EJle2DSNyouDNKYx5JVDPWQBnNc62rzthrW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=953, version=0}, acme.framework.entities.Authenticated{id=954, version=0}]
@@ -783,7 +783,7 @@ auditor1UserAccount=955
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$xbpwRO8OlE2pfTeyzB4ht.Fa2ZwFX7pZZfGukDzrAelfR3U32g6K2"
+# 	- password: java.lang.String = "$2a$05$tzS2h.HvLQIzPeUnN9JNI.JV7Hhb0.2x7UHUHNmxEcCq5Gq6k7Gma"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=956, version=0}, acme.framework.entities.Authenticated{id=957, version=0}]
@@ -804,7 +804,6 @@ Auditor1Auditor=956
 # 	- serialVersionUID: long = 1
 # 	- firm: java.lang.String = "Firm"
 # 	- responsibilityStatement: java.lang.String = "Responsibility Record"
-# 	- accepted: java.lang.Boolean = false
 
 auditor1Authenticated=957
 
@@ -831,7 +830,7 @@ auditor2UserAccount=958
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$L9Sb.cYYQZ7x3grsXUdOyOo61pcVka8KlaCCXSb2LcdjYsTC6eNsu"
+# 	- password: java.lang.String = "$2a$05$MISRvPaZR3kFT0Lx/xEWxOyweFQRwN2TTUUUhrWc/Myt7ErNzTgoi"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=Two, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=959, version=0}, acme.framework.entities.Authenticated{id=960, version=0}]
@@ -852,7 +851,6 @@ Auditor2Auditor=959
 # 	- serialVersionUID: long = 1
 # 	- firm: java.lang.String = "firm"
 # 	- responsibilityStatement: java.lang.String = "Responsibility Record"
-# 	- accepted: java.lang.Boolean = true
 
 auditor2Authenticated=960
 
