--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$EHcTJR6D9LNg.JK3j7NNKeTeuY1FmfdTHKBP0TZ0irghU2PUjmeuu"
+# 	- password: java.lang.String = "$2a$05$1TOoWDjt3zl3FNgX/Tpx/ONMn.S7ji0czq3sigFk6MzpTVnEYeRwq"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$fByQDXe8uXO0cRhiXkxKmuYr2mcmh3lKFC6MgK3dlhAKf70TBGrrW"
+# 	- password: java.lang.String = "$2a$05$O9hJZIun7WJJIQ87OkeFgOcck3F5NwUsl4y81FSNZShQZMGYGNWx6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -500,7 +500,7 @@ providerUserAccount=965
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "provider"
-# 	- password: java.lang.String = "$2a$05$TA4wJ2Tbo0NmJQ/fWxMLbO.MxzE0PG446iWNAwE3b4SRG8w1vfvre"
+# 	- password: java.lang.String = "$2a$05$kf/VOIxxf3aCkzqzOv8WDufGJGmIZia4p4JqtCrWdv539cPq2.NXa"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Provider, surname=Acme.com, email=provider@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Provider{id=966, version=0}, acme.framework.entities.Authenticated{id=967, version=0}]
@@ -547,7 +547,7 @@ consumerUserAccount=968
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "consumer"
-# 	- password: java.lang.String = "$2a$05$.HZ9g4w05rQHCHdBPLGk.e30oUOE9hlDOGOES9LwH8IACAnpYWdjO"
+# 	- password: java.lang.String = "$2a$05$5q3sk8vmXTRSTYSxsQ6f6OgJmV6KBuYyXvHMN4vSWsxTbIE6SAVaC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Consumer, surname=Acme.com, email=consumer@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Consumer{id=969, version=0}, acme.framework.entities.Authenticated{id=970, version=0}]
@@ -620,7 +620,7 @@ employer1UserAccount=973
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$.S0iPY1/sK/myFDyzRKl5.1ixzJFKmgaf0.wnyjOEUzPcwsDeg54u"
+# 	- password: java.lang.String = "$2a$05$TNaBjmU6OyaZ.8KAog6kZuLSIETWw6l36gCFBA3GsNk07WOuOoNHa"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=974, version=0}, acme.framework.entities.Authenticated{id=975, version=0}]
@@ -667,7 +667,7 @@ employer2UserAccount=976
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$VwwJ.rCid9G9tBig9HR4jePY27ftdI2JH.kZMdnXegHZg5Hg0Ovku"
+# 	- password: java.lang.String = "$2a$05$EUh1SADy1MbgLqi5VHkS7uou4sVix71r5zSaaQ9FsIDvDbqFq8Aa."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=977, version=0}, acme.framework.entities.Authenticated{id=978, version=0}]
@@ -714,7 +714,7 @@ worker1UserAccount=979
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$5Ri07JY5WvUXdaS7WHXIFeJKzABn85G9Mr6y78tCyFZp.IpjZm9Va"
+# 	- password: java.lang.String = "$2a$05$BiAcoGvTxz8wlzdv77ibHu5uv9eSQVokZHEfkE2sIOv9VO71zpkrS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=980, version=0}, acme.framework.entities.Authenticated{id=981, version=0}]
@@ -761,7 +761,7 @@ worker2UserAccount=982
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$hXvaAyhbq1zy4o2MCoQf0OEOgBV/Atx6PyNwjxz87ucMh4ecwuE8S"
+# 	- password: java.lang.String = "$2a$05$3NyBk8d8DW1SEcN4Sd4AbOKQkUjQoPtXlQ0cic274xAFhLMYpoFA6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=983, version=0}, acme.framework.entities.Authenticated{id=984, version=0}]
@@ -808,7 +808,7 @@ auditor1UserAccount=985
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$ImvTzUJuwBhRdNXeBIf80uNc.t2hzgXqPjCyvBHbZjIqH437j98UK"
+# 	- password: java.lang.String = "$2a$05$hUZiQvnGlzoCso9eACJ3rOH3NUsxhtdTANQo5LqfVQuWsLbW1ADi6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=986, version=0}, acme.framework.entities.Authenticated{id=987, version=0}]
@@ -855,7 +855,7 @@ auditor2UserAccount=988
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$81gHfnO/0QmkeGndlYr83OXlcYS7Nz/I0mC0qJiNBURO49ulpbjCW"
+# 	- password: java.lang.String = "$2a$05$iKog7ma0yBwa1KAZciM5rOC0WRdR3hmJWry/HAbsl/SpuLx0zkPVW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=Two, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=989, version=0}, acme.framework.entities.Authenticated{id=990, version=0}]
